--- a/template/register.tmpl
+++ b/template/register.tmpl
@@ -2,7 +2,7 @@
 
 {% block title %}Member register{% endblock %}
 
-{% block body %}
+{% block main %}
 <form action="/member/register/" method="post">{% csrf_token %}
 {{ form.as_p }}
 <input type="submit" value="Submit" />
