--- a/template/register.tmpl
+++ b/template/register.tmpl
@@ -5,6 +5,6 @@
 {% block main %}
 <form action="/member/register/" method="post">{% csrf_token %}
 {{ form.as_p }}
-<input type="submit" value="Submit" />
+<input type="submit" value="Register" />
 </form>
 {% endblock %}
