--- a/template/base.tmpl
+++ b/template/base.tmpl
@@ -11,7 +11,7 @@
 {% if user.is_authenticated %}
 <li>Upload</li>
 <li>My owata</li>
-<li>{{ user.username }}</li>
+<li><a href="{% url 'member.views.profile' username=user.username %}">{{ user.username }}</a></li>
 <li><a href="{% url 'django.contrib.auth.views.logout' %}">Logout</a></li>
 {% else %}
 <li><a href="{% url 'django.contrib.auth.views.login' %}">Login</a></li>
