--- a/template/member/login.tmpl
+++ b/template/member/login.tmpl
@@ -5,6 +5,8 @@
 {% block title %}Login{% endblock %}
 
 {% block main %}
+<h1>Login</h1>
+
 {% if form.errors %}
 <p>Your username and password didn't match. Please try again.</p>
 {% endif %}
