--- a/template/game/get_game.tmpl
+++ b/template/game/get_game.tmpl
@@ -6,8 +6,10 @@
 {% block title %}{{ user.username }} - Game list{% endblock %}
 
 {% block main %}
+<h1>{{ game.title }}</h1>
+
 <div align="center">
-<iframe width="576px" height="432px" src="{% url 'game.views.get_game_swf' game_entry=game.id %}"></iframe>
+<embed width="576px" height="432px" src="{% url 'game.views.get_game_swf' game_entry=game.id %}" wmode="transparent" type="application/x-shockwave-flash">
 </div>
 <form action="{% url 'game.views.add_game_comment' %}" method="post">{% csrf_token %}
 {{ comment_form.as_p }}
