--- a/template/game/add_game.tmpl
+++ b/template/game/add_game.tmpl
@@ -2,7 +2,7 @@
 
 {% load url from future %}
 
-{% block title %}Member register{% endblock %}
+{% block title %}Add game{% endblock %}
 
 {% block main %}
 
