--- a/template/game/get_game_list.tmpl
+++ b/template/game/get_game_list.tmpl
@@ -1,6 +1,7 @@
 {% extends "base.tmpl" %}
 
 {% load url from future %}
+{% load comment %}
 
 {% block title %}{{ list_user.username }} - Game list{% endblock %}
 
@@ -22,7 +23,7 @@
 	{% for game in game_list %}
 		<tr>
 			<td><a href="{% url 'game.views.get_game' game_entry=game.id %}">{{ game.title }}</a></td>
-			<td>{{ game.d00 }}/{{ game.d01 }}/{{ game.d02 }}/{{ game.d03 }} {{ game.d10 }}/{{ game.d11 }}/{{ game.d12 }}/{{ game.d13 }}</td>
+			<td>{{ game.star|star_list }}</td>
 			<td>{{ game.report_count }}</td>
 			<td>{{ game.comment_count }}</td>
 			<td>{{ game.create_date }}</td>
